--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
           <div class="flex flex-column">
             <a href="tel:+1(863)3991365"><span class="fw-semiBold">Teléfono:</span> +1 (863) 399‑1365</a>
             <a href=""><span class="fw-semiBold">Correo:</span> info@ambeautystudio.com</a>
-            <a href=""><span class="fw-semiBold">Dirección: </span><br>13550 Village Park Dr, Suite #115
-              <br>Orlando, FL 32837</a>
+            <a href=""><span class="fw-semiBold">Dirección: </span><br>8803 Futures Dr, unit 4 suite 102
+              <br>Orlando, FL 32819</a>
           </div>
           <div>
             <h3 class="fw-bold">Horario de apertura:</h3>
